# FedVSE

./: README.md
algorithms/: .gitignore  README.md
algorithms/cpp/: Broker.cpp  CMakeLists.txt  Silo.cpp  User.cpp  global.hpp
algorithms/cpp/cluster/: clusterBuilder.hpp
algorithms/cpp/cmake/: Grpc.cmake  MilvusProtoGen.cmake  ThirdPartyPackages.cmake
algorithms/cpp/crypto/: util.hpp
algorithms/cpp/middleware/: BaseSiloConnector.hpp  FileSiloConnector.hpp  MilvusSiloConnector.hpp  PgSiloConnector.hpp
algorithms/cpp/pgm/: pgm_interface.hpp
algorithms/cpp/proto/: BrokerSilo.proto  UserBroker.proto
algorithms/cpp/protolib/: BrokerSilo.grpc.pb.cc  BrokerSilo.grpc.pb.h  BrokerSilo.pb.cc  BrokerSilo.pb.h  UserBroker.grpc.pb.cc  UserBroker.grpc.pb.h  UserBroker.pb.cc  UserBroker.pb.h
algorithms/cpp/sgx/Enclave/: Enclave.cpp  Enclave.edl
algorithms/cpp/sgx/cmake/: FindSGX.cmake
algorithms/cpp/sgx/mpc/: SgxMpc.cpp  SgxMpc.h
algorithms/cpp/utils/: DataType.hpp  File_IO.cpp  File_IO.h  ScalarType.hpp
algorithms/scripts/: Silo.sh  build.sh  ip.txt  output.txt  run.sh  runBroker.sh  runSilo.sh  runSilo1.sh  runSilo2.sh  runSilo3.sh  runSilo4.sh  test.sh
algorithms/testdata/dataset/: cloud_url.txt
algorithms/testdata/pyscript/: README.md  main.py  read_npy.py  read_parquet.py  read_tfrecord.py  readers.py  utils.py
algorithms/testdata/pyscript/DEEP/: chang_meta.py  generate_meta.py  generate_query.py  groundtruth.py  merge.py  read.py  split.py
algorithms/testdata/pyscript/LION/: process.py  process2.py  read.py
algorithms/testdata/pyscript/WIT/: generate_query.py  groundtruth.py  merge.py  process.py  read.py  split.py
algorithms/testdata/pyscript/YouTube/: generate_query_audio.py  generate_query_rgb.py  groundtruth_audio.py  groundtruth_rgb.py  merge.py  process.py  read.py  split.py  statistics.py
demonstration/: index.html  map.html  package-lock.json
demonstration/css/: base.css
demonstration/js/: index.js  map.js
